# wasm-doc-boost

./: .gitignore  README.md  compose.yaml  serve.sh
backend/: Containerfile  entrypoint.sh  requirements.txt  server.py
crates/features-core/: Cargo.toml
crates/features-core/src/: color.rs  crumple.rs  document.rs  edges.rs  lib.rs  noise.rs  shadow.rs  texture.rs
crates/pii-core/: Cargo.toml
crates/pii-core/src/: context.rs  crf.rs  email.rs  lib.rs  luhn.rs  phone.rs  ssn.rs
crates/py-features/: Cargo.toml  pyproject.toml
crates/py-features/src/: lib.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: gbdt.rs  lib.rs
crates/wasm-bridge/tests/: node_integration.mjs
frontend/: .gitignore  index.html  model.json  package-lock.json  package.json  serve.mjs  serve.py  serve.sh  test_glm_node.mjs  test_glm_ocr.mjs  test_onnx_node.mjs  wasm_bridge.d.ts  wasm_bridge.js  wasm_bridge_bg.wasm  wasm_bridge_bg.wasm.d.ts
frontend/src/: docboost.js  enrich.js  merge.js  normalize.js  schemas.js
scripts/: build_labels.py  download_datasets.py  eval_cordv2.mjs  eval_crf.mjs  eval_pii.mjs  eval_python.py  eval_wasm.mjs  eval_worker.mjs  export_features.py  export_features_parallel.py  extract_parquet_images.py  generate_synthetic_dataset.py  ocr_cordv2.mjs  ocr_fatura2.mjs  ocr_worker.mjs  train_crf.py  train_model.py
